MushroomBody implemented